# MilvusChat

./: LICENSE  README.md  pyproject.toml  setup.cfg
src/textmilvus/: TextMilvus.py  __init__.py
tests/: test_text_milvus.py
