[metadata]
name = textmilvus
version = 0.1
author = Itnesh Kumar
author_email = your.email@example.com
description = Short description of your package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/your_username/your_package_name
license = MIT

[options]
packages = find:
install_requires =
    pymilvus
    langchain
    sentence-transformers
python_requires = >=3.10

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest

